# horcrux

./: CMakeLists.txt
common/: CRC32.cpp  CRC32.hpp  Defs.hpp  IChecksum.hpp  Utils.cpp  Utils.hpp  commands.hpp
horcrux_client/src/: CMakeLists.txt  ChunckCreator.cpp  ChunkCreator.cpp  ChunkCreator.hpp  ISplitter.hpp  client.cpp  client.hpp  commands.hpp  main.cpp
horcrux_server/src/: CMakeLists.txt  DiskStorer.cpp  DiskStorer.hpp  IStorer.hpp  main.cpp  server.cpp  server.hpp
